feat(redis src):
window上Dl_info报错，屏蔽debug.c两个函数

--- a/.gitignore
+++ b/.gitignore
@@ -38,4 +38,6 @@ Makefile.dep
 .ccls-cache/*
 compile_commands.json
 redis.code-workspace
-cmake-build-debug
+cmake-build-debug*
+src/*.dll
+src/*.exe
